# pallas-stranded-cable

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  meta.yaml  pyproject.toml  requirements.txt
doc/: conf.py  content.rst  examples.rst  getting-started.rst  index.rst  make.bat  modules.rst  references.rst  strdcable.rst
examples/: example_cable_traction.py  example_conductor_bending.py  example_dataset_creation.py
src/strdcable/: build_tools.py  cable.py  config.py  geometrical_tools.py  overheadlines.py
src/strdcable/data/: FLEXION_CARDINAL_H40kN_mu0.7_FOTI.csv  cables_dataset.csv
strdcable/: cable.py  config.ini  physical_tools.py
strdcable/data/: norm_OHL_EN_wires.csv
tests/: test_build_tools.py  test_cable.py  test_conductor.py
