[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "stranded-cable"
version = "2024.1.0"
authors = [
    {name = "Eurobios Mews Labs", email = "opentools@mews-labs.com"},
]
description = "stranded-cable is a python package proposed to evaluate stranded cables' physical characteristics."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy >= 1.19.4",
    "pandas >= 1.1.4",
    "scipy >= 1.5.4",
]

[project.optional-dependencies]
doc = ["sphinx", "sphinx_rtd_theme"]
examples = ["matplotlib"]
test = ["pytest", "pylint"]

[tool.setuptools.package-data]
strdcable = ["data/*.csv", "*.ini"]

[project.urls]
"Repository" = "https://github.com/rte-france/pallas-standed-cable"
